Mobile navbar alignment and logo fixes

--- a/docs/theme.css
+++ b/docs/theme.css
@@ -94,6 +94,7 @@ d-appendix {
   padding-bottom: 3px;
   margin-bottom: 0px;
   padding-right: 0px;
+  vertical-align: unset;
 }
 
 /* Categories / labels */
@@ -182,7 +183,7 @@ d-article h2 {
 
 /* Align navbar button on top right side (only applies for mobile) */
 .nav-toggle {
-  padding-top: 14px !important;
+  padding-top: 10px !important;
 }
 
 /* remove image on mobile */
